Mobile Word Wrap fix

--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -18,7 +18,9 @@
 }
 .sideBar {
     max-width: 30%;
-    overflow-wrap: break-word;
+}
+.sideBar li {
+    overflow-wrap: anywhere;
 }
 hr.rounded {
     display: none;
